# sparklemotion

./: .babelrc  .gitignore  .gitmodules  .java-version  .prettierrc  BUILT  BUILT.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md  Tutorial.md  VizPanel.js  _RESOURCE_FILES_  app.js  build.gradle  build.gradle.kts  eye-color.glsl  fixed-values.glsl  gradle.properties  index.html  index.js  jump.glsl  kgl.js  kgl.js.map  kgl.meta.js  klock-root-klock.js  klock-root-klock.js.map  klock-root-klock.meta.js  kotlin-extensions.js  kotlin-extensions.js.map  kotlin-extensions.meta.js  kotlin-nodejs-source-map-support.js  kotlin-nodejs-source-map-support.js.map  kotlin-react.js  kotlin-react.js.map  kotlin-react.meta.js  kotlin-test-nodejs-runner.js  kotlin-test-nodejs-runner.js.map  (+38 more)
.circleci/: config.yml  gh-pages-config.yml
admin/: index.html
androidApp/: build.gradle.kts
androidApp/src/androidMain/: AndroidManifest.xml
baaahs/plugin/beatlink/: BeatLinkControl.glsl
baaahs/shows/: BlueDream.glsl  EvolutionOfAcid.glsl  FireDancer.glsl  OrangeSnowflake.glsl  OrangeTang.glsl  Seascape.glsl  Spectrum.glsl  ZebraMadness.glsl
brain/hw/: Brain1port.brd  Brain1portA.brd  Brain1portB.sch  Brain3port.sch
brain/hw/BAAAHS-BRN01-A/: Brain1port.sch  Brain1portA.sch  Brain3port.brd
brain/hw/BAAAHS-BRN01-B/: Brain1portB.brd
brain/hw/BAAAHS-BRN01-C/: BAAAHS-BRN01-C.brd  BAAAHS-BRN01-C.sch
brain/hw/BAAAHS-BRN01-D/: BAAAHS-BRN01-D.brd  BAAAHS-BRN01-D.sch
brain/hw/BAAAHS-BRN01-E/: BAAAHS-BRN01-E.brd  BAAAHS-BRN01-E.sch  BAAAHS-BRN01-E_GerberViewer.cuprumcam
brain/sw/: .gitignore  README.md  sync-idf.sh
brain/sw/evilclock/: CMakeLists.txt
brain/sw/generic_test/: .gitignore  readme.md
brain/sw/glamsign/: .gitignore  CMakeLists.txt  deploy_firmware.sh
brain/sw/henge/: CMakeLists.txt  sdkconfig  sdkconfig.old
brain/sw/henge/main/: CMakeLists.txt  idf_component.yml  main.cpp  menu.h  wearable.cpp  wearable.h
brain/sw/playa/: .gitignore  CMakeLists.txt  deploy_firmware.sh  partitions.csv  readme.md  sdkconfig
brain/sw/rust/: Cargo.toml  README.md
brain/sw/rust/.cargo/: config.toml
brain/sw/rust/btmapper/: Cargo.toml  build.rs
brain/sw/rust/btmapper/.cargo/: config.toml
brain/sw/rust/btmapper/tests/: hello_test.rs
brain/sw/rust/src/: main.rs
brain/sw/tempmon/: readme.md  sdkconfig  tm esp32 pinout.ai
brain/sw/tombike/: CMakeLists.txt  sdkconfig  sdkconfig.old
brain/sw/wearable/: CMakeLists.txt
brain/sw/wigsnatch/: CMakeLists.txt  sdkconfig  sdkconfig.old
brain/sw/wigsnatch/main/: CMakeLists.txt  idf_component.yml  main.cpp  menu.cpp  shader-growing.cpp  shader-growing.h  shader-legs.cpp  shader-legs.h  shader-mq.cpp  shader-mq.h  shader-rotator.cpp  shader-rotator.h  shader-top-sparkles.cpp  shader-top-sparkles.h  wig-shader.cpp  wig-shader.h  wigsnatch.cpp  wigsnatch.h
data/: Another.scene  Arttitude.scene  BAAAHS 2023.scene  BAAAHS Campout 2024.scene  BAAAHS-Eyes.scene  BAAAHS.scene  BAAAHS2.scene  BRC 2023.sparkle  BRC 2024.sparkle  BRC.sparkle  BRC23.scene  BeachRave.sparkle  Bens_Sparklemotion_Show.sparkle  Campout 2024.sparkle  Decom2019.scene  Demo.scene  Demo.sparkle  Empty.scene  Fancy.sparkle  Grid.sparkle  Hi Res.scene  Honcho.scene  Honcho.sparkle  Living Room.scene  PastureBedtime.sparkle  Playa 2022.sparkle  Playa in the Grove.scene  Playa2021.scene  Provisioning.sparkle  Sonic Runway 2024.sparkle  SuiGeneris.scene  Tech Demo.scene  config.json  scene.json  show-2021-05.sparkle  show.sparkle
data/mapping-sessions/: 20220804-043347-v0.json  20220804-174949-v0.json  20220818-035831-v0.json  20250820-020047-v1.json  20250820-030035-v1.json  20250820-135327-v1.json  20250820-161807-v1.json  20250820-165859-v1.json  20250820-170511-v1.json  20250820-171053-v1.json  20250820-171837-v1.json  20250820-220305-v1.json  20250820-224954-v1.json  20250820-230605-v1.json  20250820-231451-v1.json  20250820-232004-v1.json  20250820-232943-v1.json  20250821-000959-v1.json  20250821-004050-v1.json  20250821-004723-v1.json  20250821-014956-v1.json  20250821-110548-v1.json  20250821-112454-v1.json  20250821-113110-v1.json  20250821-115003-v1.json  20250821-115845-v1.json  20250821-121609-v1.json  20250821-122857-v1.json  20250821-123515-v1.json  20250821-132156-v1.json  20250821-161631-v1.json  20250821-164502-v1.json  20250821-165938-v1.json  20250821-170716-v1.json  20250821-171544-v1.json  20250821-172828-v1.json  20250821-173318-v1.json  20250821-174343-v1.json  20250821-183158-v1.json  20250821-203001-v1.json  (+7 more)
data/mapping-sessions/afikmapping/: 20190824-075726-v0.json  20190824-085503-v0.json  20190824-091034-v0.json  20190825-070850-v0.json
data/mapping-sessions/dwayman/: 20190823-074740-v0.json  20190823-081354-v0.json  20190823-090910-v0.json  20190823-103639-v0.json  (+11 more)
data/presets/: moving-head-positions.json
distributions/: mapper-index.html
doc/: index.html  navigation.html
doc/scripts/: navigation-pane.json  pages.json
doc/sparklemotion/: index-outline.html  index.html  package-list
esp32/: helloworld.S  helloworld.c  includes  make
ext/three/: build.gradle.kts
glsl/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
karma.config.d/: include-three.js  work-around-chromium-bug.js
lib/: BufferGeometryUtils.js  kotlinx-serialization-runtime-js.meta.js
mapper/: index.html
monitor/: index.html
net/: build.gradle.kts
play/: root-package.kjsm
play/baaahs/: baaahs.kjsm
rpc/: build.gradle.kts
rpc/processor/: build.gradle.kts
server/: build.gradle.kts
shader-libraries/built-in/: Fireball.glsl  _libraryIndex.json
shared/: build.gradle.kts
shared/webpack.config.d/: bundleAnalyzer.js  output.js
sparklemotion/: root-package.kjsm
sparklemotion/baaahs/: baaahs.kjsm
sparklemotion/three/: three.kjsm
templates/scenes/: BAAAHS-Eyes.scene
templates/shows/: Default for iPad.sparkle  Eve Rafters.sparkle  Honcho.sparkle  PastureBedtime.sparkle  movers.sparkle  show.sparkle
ui/: index.html
util/: build.gradle.kts
webpack.config.d/: output.js
(+25577 files in other folders)
